2010-11-16  Daniel Dehennin  <daniel.dehennin@baby-gnu.org>

	* mml2015.el (mml2015-epg-sign): Use From header.

2010-11-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-wash-images): Register a displayer.

	* gnus-util.el (gnus-find-text-property-region): Return markers.

	* shr.el (shr-tag-img): Put a displayer in the text property.

	* gnus-util.el (gnus-find-text-property-region): New utility function.

	* gnus-html.el (gnus-html-display-image): Make the alt optional.
	(gnus-html-show-images): Remove.

	* gnus-art.el (gnus-article-show-images): New, more general function.

	* gnus-html.el: Use image-url instead of gnus-image-url to unify the
	image url text properties.

	* shr.el: Ditto.

	* gnus-agent.el (gnus-agentize): Only do the auto-agentizing if
	gnus-agent-auto-agentize-methods is set.  Which it isn't.

2010-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-move-article): Fix `while' loop to make it
	work for two or more articles.

2010-11-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (article-treat-non-ascii): Keep text properties not to
	divide an image that's in an html article to two or more when washing
	non-ASCII characters in alt text of it.

2010-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-decode.el (mm-dissect-buffer): Pass sender's mail address to
	smime-decrypt-region using function argument.
	(mm-possibly-verify-or-decrypt, mm-dissect-multipart): Relay it.

	* mm-view.el (mm-view-pkcs7, mm-view-pkcs7-decrypt): Relay it.

	* smime.el (smime-decrypt-region): Catch it.

2010-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* smime.el (smime-mode-map): Move initialization into declaration.
	(gnus-run-mode-hooks): Don't autoload.
	(smime-mode): Use define-derived-mode.

2010-11-11  Glenn Morris  <rgm@gnu.org>

	* smime.el (from): Restrict declaration to XEmacs.

	* nnir.el (gnus-group-topic-name): Autoload.

2010-11-11  Katsumi Yamaoka  <yamaoka@jpl.org>
